fixed the nowrap signup btn. Made the header more visible.

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -10,7 +10,7 @@
 	width: 100%;
 	padding: 0rem 3.2rem;
 	margin: 0 auto;
-	background-color: rgba(255, 255, 255, 0.2);
+	background-color: rgba(255, 255, 255, 0.8);
 
 	&__item {
 		display: flex;
